--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,12 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
-  </dependencies>
+    
+    <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.0.0-M4</version>
+</dependency>
+ </dependencies>
 </project>
