--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,14 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
- 
+  
+  <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-source-plugin -->
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-source-plugin</artifactId>
+    <version>3.2.1</version>
+</dependency>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
